--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
+*.xcuserstate
+project.xcworkspace
+xcuserdata
+UserInterfaceState.xcuserstate
+project.xcworkspace/
+xcuserdata/
+UserInterface.xcuserstate
 
-BookReading/CoreDataDemo_TapOut/
+.DS_Store
+*/.DS_Store
+
+
