--- a/sharemap_manage/package.json
+++ b/sharemap_manage/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "axis": "^1.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.1.8",
