--- a/sharemap_backend/package.json
+++ b/sharemap_backend/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.3.0"
+  },
+  "scripts": {
+    "start": "nodemon serve/index.js"
   }
 }
