--- a/sharemap_os/package.json
+++ b/sharemap_os/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "axios": "^0.26.1",
     "element-plus": "^2.1.10",
-    "less": "^4.1.2",
     "vue": "^3.0.4",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^1.0.0-rc.13",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0"
   }
 }
