--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ UserInterface.xcuserstate
 
 */node_modules
 .DS_Store
+Python/pythonProject/.idea/pythonProject.iml
+Python/pythonProject/.idea/misc.xml
