--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ UserInterface.xcuserstate
 */node_modules
 Python/pythonProject/.idea/pythonProject.iml
 Python/pythonProject/.idea/misc.xml
+Python/pythonProject/.idea/misc.xml
