--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ UserInterface.xcuserstate
 Python/pythonProject/.idea/pythonProject.iml
 Python/pythonProject/.idea/misc.xml
 Python/pythonProject/.idea/misc.xml
+Python/pythonProject/.idea/misc.xml
+Python/pythonProject/.idea/pythonProject.iml
